<resources>
    <string name="app_name">Car Loan Calculator</string>

    <string name="car_price">Car Price</string>
    <string name="downpayment">Down Payment</string>
    <string name="loan_period">Loan Period(YEAR)</string>
    <string name="loan">Car Loan</string>
    <string name="interest">Interest</string>
    <string name="interest_rate">Interest Rate(%)</string>
    <string name="montly_repayment">Monthly Repayment</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
</resources>
