<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/carLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:height="100px"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextCarPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/car_price"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextdownpayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/downpayment"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextloanPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loan_period"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextInterestRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/interest_rate"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/textViewcarloan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan" />

    <TextView
        android:id="@+id/textViewinterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest" />

    <TextView
        android:id="@+id/textViewinterestmonthlyrepayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montly_repayment" />



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">


    <Button
        android:id="@+id/buttoncalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/buttonreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="resetInput"
        android:text="@string/reset"
        android:visibility="visible" />

</LinearLayout>
</LinearLayout>
